refactor: optimize pagination logic in JpaSpecificationPagingSupport