@@ -6,17 +6,18 @@ import jakarta.persistence.criteria.CriteriaQuery;
 import jakarta.persistence.criteria.Predicate;
 import jakarta.persistence.criteria.Root;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.data.jpa.repository.query.QueryUtils;
 import org.springframework.data.jpa.repository.support.JpaEntityInformation;
 import org.springframework.data.jpa.support.PageableUtils;
+import org.springframework.data.support.PageableExecutionUtils;
 
 public abstract class JpaSpecificationPagingSupport<T, I> {
 
@@ -34,9 +35,9 @@ public abstract class JpaSpecificationPagingSupport<T, I> {
             Pageable pageable,
             Function<Collection<I>, List<T>> fetchEntities) {
         List<I> ids = fetchPageIds(specification, pageable);
-        long total = countTotal(specification);
         if (ids.isEmpty()) {
-            return new PageImpl<>(List.of(), pageable, total);
+            return PageableExecutionUtils.getPage(
+                    Collections.emptyList(), pageable, () -> countTotal(specification));
         }
 
         List<T> loadedEntities = fetchEntities.apply(ids);
@@ -47,7 +48,7 @@ public abstract class JpaSpecificationPagingSupport<T, I> {
         }
 
         List<T> ordered = ids.stream().map(byId::get).toList();
-        return new PageImpl<>(ordered, pageable, total);
+        return PageableExecutionUtils.getPage(ordered, pageable, () -> countTotal(specification));
     }
 
     private List<I> fetchPageIds(Specification<T> specification, Pageable pageable) {
@@ -62,8 +63,6 @@ public abstract class JpaSpecificationPagingSupport<T, I> {
 
         applySpecification(specification, cb, idQuery, root);
         applySort(pageable, cb, idQuery, root);
-
-        idQuery.distinct(false);
 
         var typed = entityManager.createQuery(idQuery);
         if (pageable.isPaged()) {
